# claude-sessions-explorer

./: .gitignore  README.md  explore.py  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: add-component.md  add-hook.md  add-page.md  lint-fix.md  setup-shadcn.md
backlog/001--session-learning-extraction/: PLAN.md  TODO.md
hooks/: track-commits.sh
next/: README.md  package.json
next/src/app/: globals.css  layout.tsx  page.tsx
next/src/app/api/knowledge/: route.ts
next/src/app/api/knowledge/[project]/: route.ts
next/src/app/api/projects/: route.ts
next/src/app/api/projects/[id]/: route.ts
next/src/app/api/sessions/[id]/: route.ts
next/src/app/api/stats/: route.ts
next/src/app/knowledge/: page.tsx
next/src/app/projects/: page.tsx
next/src/app/projects/[id]/: page.tsx
next/src/app/sessions/[id]/: page.tsx
next/src/components/: MessageBubble.tsx  SearchBar.tsx  SessionCard.tsx  StatsCard.tsx
next/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  skeleton.tsx
next/src/lib/: utils.ts
next/src/types/: index.ts
src/claude_sessions_explorer/: __init__.py  models.py
src/claude_sessions_explorer/memory/: __init__.py  consolidator.py  extractor.py  generator.py
src/claude_sessions_explorer/prompts/: __init__.py  consolidate.py  extract.py  generate.py
tasks/001--session-learning-extraction/: TODO.md
